--- a/src/main/resources/assets/examplemod/lang/en_us.json
+++ b/src/main/resources/assets/examplemod/lang/en_us.json
@@ -1,13 +1,13 @@
 {
-  "itemGroup.examplemod": "Example Mod Tab",
-  "block.examplemod.example_block": "Example Block",
-  "item.examplemod.example_item": "Example Item",
+  "itemGroup.civadd": "Example Mod Tab",
+  "block.civadd.example_block": "Example Block",
+  "item.civadd.example_item": "Example Item",
 
-  "examplemod.configuration.title": "Example Mod Configs",
-  "examplemod.configuration.section.examplemod.common.toml": "Example Mod Configs",
-  "examplemod.configuration.section.examplemod.common.toml.title": "Example Mod Configs",
-  "examplemod.configuration.items": "Item List",
-  "examplemod.configuration.logDirtBlock": "Log Dirt Block",
-  "examplemod.configuration.magicNumberIntroduction": "Magic Number Text",
-  "examplemod.configuration.magicNumber": "Magic Number"
+  "civadd.configuration.title": "Example Mod Configs",
+  "civadd.configuration.section.civadd.common.toml": "Example Mod Configs",
+  "civadd.configuration.section.civadd.common.toml.title": "Example Mod Configs",
+  "civadd.configuration.items": "Item List",
+  "civadd.configuration.logDirtBlock": "Log Dirt Block",
+  "civadd.configuration.magicNumberIntroduction": "Magic Number Text",
+  "civadd.configuration.magicNumber": "Magic Number"
 }
